feat(docs): add swagger for create chapter
