# backend/docs/swagger.json
@@ -52,6 +52,50 @@
                         }
                     }
                 }
+            },
+            "post": {
+                "description": "create chapters",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "manga"
+                ],
+                "summary": "craete chapter",
+                "parameters": [
+                    {
+                        "description": "manga requested info",
+                        "name": "manga",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.CreateChapterRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/model.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/entity.Chapter"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
             }
         },
         "/chapter/{chapterID}": {
@@ -359,6 +403,20 @@
                 },
                 "type": {
                     "type": "string"
+                }
+            }
+        },
+        "model.CreateChapterRequest": {
+            "type": "object",
+            "properties": {
+                "chapter": {
+                    "type": "string"
+                },
+                "content": {
+                    "type": "string"
+                },
+                "manga_id": {
+                    "type": "integer"
                 }
             }
         },
